# ha-lucarne

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  eslint.config.js  hacs.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  hacs.yml  hassfest.yml
blueprints/automation/: lucarne_chores_daily_reset.yaml  lucarne_chores_streak_advance.yaml  lucarne_reminders_sync.yaml
bridge/: README.md  com.molant.ha-lucarne-sync.plist  ha-lucarne-sync.json
custom_components/lucarne_family/: __init__.py  apple_sentinel_backfill.py  automation_writer.py  avatar_service.py  completion_listener.py  config_flow.py  const.py  entity_manager.py  manifest.json  member_service.py  models.py  presets.py  recurrence.py  rename.py  reset_logic.py  schema.sql  services.yaml  store.py  streak_logic.py  strings.json  task_service.py  websocket_api.py
custom_components/lucarne_family/frontend/: ha-lucarne.js
docs/: architecture.md  cards.md  community-post.md  config-recipes.md  events.md  integration.md  ipad-landscape.md  reminders-bridge.md  services.md  visible-days.md
features/calendar-polish/: README.md  phase-1-pan-fixes.md  phase-2-event-dialog.md  phase-3-delete-events.md
features/chores-card/: README.md  phase-0-test-foundation.md  phase-1-integration-foundation.md  phase-2-task-model.md  phase-3-managed-automations.md  phase-4-chores-card.md  phase-5-today-card-docs.md  phase-6-polish-roundtrip.md
features/ha-lucarne/: README.md  phase-1-foundation.md  phase-2-today-card.md  phase-3-calendar-card.md  phase-4-chores-card.md  phase-5-polish-publication.md
features/visible-days/: README.md  phase-1-foundation.md  phase-2-rolling-window.md  phase-3-touch-polish.md
scripts/: create-release.sh  deploy-integration.sh  deploy.sh
src/: index.ts
src/cards/: lucarne-calendar-card.ts  lucarne-chores-card.ts  lucarne-today-card.ts
src/components/: add-task-popover.ts  agenda-strip.ts  avatar-upload-modal.ts  calendar-day-pan.ts  calendar-event-block.ts  calendar-event-popover.ts  calendar-grid.ts  celebration-overlay.ts  chore-row.ts  create-event-popover.ts  dressing-tip.ts  edit-task-popover.ts  family-ready-pill.ts  kid-avatar.ts  kid-column.ts  member-avatar.ts  member-column.ts  out-of-band-stub.ts  presence-pills.ts  reorder-list.ts  skeleton-day-column.ts  streak-display.ts  task-row.ts  tasks-summary.ts  visibility-pills.ts  weather-block.ts
src/editors/: lucarne-calendar-card-editor.ts  lucarne-chores-card-editor.ts  lucarne-today-card-editor.ts
src/shared/: calendar-helpers.ts  calendar-layout.ts  chore-helpers.ts  cropper-styles.ts  date-helpers.ts  design-tokens.ts  editor-styles.ts  family-subscription.ts  grid-preview-override.ts  ha-elements.ts  ha-subscriptions.ts  icons.ts  integration-services.ts  pan-math.ts  recurrence.ts  rolling-window.ts  strings.ts  types.ts  visible-window.ts
tests/components/: add-task-popover.test.ts  agenda-sort.test.ts  avatar-upload-modal.test.ts  calendar-day-pan.test.ts  calendar-event-popover.test.ts  calendar-grid.test.ts  dressing-tip.test.ts  edit-task-popover.test.ts  family-ready-pill.test.ts  lucarne-calendar-card.test.ts  lucarne-chores-card-editor.test.ts  lucarne-chores-card.test.ts  lucarne-today-card-editor.test.ts  lucarne-today-card.test.ts  member-avatar.test.ts  member-column.test.ts  reorder-list.test.ts  task-row.test.ts  tasks-summary.test.ts
tests/python/: conftest.py  test_apple_sentinel_backfill.py  test_apple_writeback_event.py  test_automation_writer.py  test_avatar_service.py  test_completion_listener.py  test_config_flow.py  test_const.py  test_custom_presets.py  test_entity_manager.py  test_frontend.py  test_member_service.py  test_models.py  test_options_flow.py  test_presets.py  test_recurrence.py  test_rename.py  test_reset_logic.py  test_services_yaml.py  test_smoke.py  test_store.py  test_store_tasks.py  test_streak_logic.py  test_task_service.py  test_websocket.py
tests/setup/: dom-globals.mjs  ha-mock.d.mts  ha-mock.mjs
tests/shared/: calendar-helpers.test.ts  calendar-layout.test.ts  chore-helpers.test.ts  date-helpers.test.ts  family-subscription.test.ts  ha-subscriptions.test.ts  integration-services.test.ts  recurrence.test.ts  rolling-window.test.ts  visible-window.test.ts
themes/: lucarne.yaml
(+5 files in other folders)
