[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lucarne_family"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "ical==8.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
exclude = ["src*", "tests*", "dist*", "node_modules*"]

[tool.setuptools.package-data]
"custom_components.lucarne_family" = ["manifest.json", "schema.sql", "services.yaml", "translations/*.json"]

[tool.ruff]
# target-version is inferred from project.requires-python above.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["homeassistant.*", "pytest_homeassistant_custom_component.*", "dateutil.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
filterwarnings = [
    "error::DeprecationWarning:custom_components.lucarne_family",
]
