[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "lucarne_family"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-homeassistant-custom-component>=0.13.334",
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "ical==13.2.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
exclude = ["src*", "tests*", "dist*", "node_modules*"]

[tool.setuptools.package-data]
"custom_components.lucarne_family" = ["manifest.json", "schema.sql", "services.yaml", "translations/*.json"]

[tool.ruff]
# target-version is inferred from project.requires-python above.
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["homeassistant.*", "pytest_homeassistant_custom_component.*", "dateutil.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
filterwarnings = [
    "error::DeprecationWarning:custom_components.lucarne_family",
]
